--- a/themes/hugoplate/layouts/blog/single.html
+++ b/themes/hugoplate/layouts/blog/single.html
@@ -63,7 +63,7 @@
               </div>
             {{ end }}
             <div class="lg:col-5 flex items-center">
-              {{ partial "social-share" (dict "Context" . "Class" "share-icons" "Title" (T "share") "Whatsapp" false "Telegram" false "Linkedin" true "Pinterest" false "Tumblr" false "Vk" false) }}
+              {{ partial "social-share" (dict "Context" . "Class" "share-icons" "Title" (T "share") "Whatsapp" true "Telegram" false "Linkedin" true "Pinterest" false "Tumblr" false "Vk" false) }}
             </div>
           </div>
           {{/*  <!-- comments -->
