--- a/themes/hugoplate/layouts/blog/single.html
+++ b/themes/hugoplate/layouts/blog/single.html
@@ -62,8 +62,8 @@
                 </ul>
               </div>
             {{ end }}
-            <div class="lg:col-5 flex items-center">
-              {{ partial "social-share" (dict "Context" . "Class" "share-icons" "Title" (T "share") "Whatsapp" true "Telegram" false "Linkedin" true "Pinterest" false "Tumblr" false "Vk" false) }}
+            <div class="lg:col-4 flex items-center">
+              {{ partial "social-share" (dict "Context" . "Class" "share-icons" "Title" (T "share") "Whatsapp" true "Telegram" false "Linkedin" true "Pinterest" false "Tumblr" false "Vk" false "Reddit" false "Email" false) }}
             </div>
           </div>
           {{/*  <!-- comments -->
